2.25v

1. Posibility to disable groups. Thats the only stuff will be done regarding https://github.com/LiveHelperChat/livehelperchat/issues/626
2. Company name for theme. https://github.com/LiveHelperChat/livehelperchat/issues/644

execute doc/update_db/update_102.sql for update

2.24v

Sponsored release
1. Automatic messages translations using Bing or Google translations service.
2. Futher Bootstrap fixes. Were missing some places with old foundation 4 syntax.
3. A little bit refactored chat window. Removed subtabs.
4. Microphone settings moved to actions block and in it's place added automatic translations button.
5. Allow operators to chat even if they do not have permission to open others operators chats. https://forum.livehelperchat.com/viewtopic.php?id=1019
6. Right columns nicer interface
7. Co-Browsing scroll sync stopped to work after jQuery update. Switched to native JS API

execute doc/update_db/update_101.sql for update

2.23v

1. Integrated webpack, bower, gulp and other fancy stuff.
2. LHC was migrated to Bootstrap v3.3.2. I had tough choise decing stay with Foundation or use Bootstrap, but for systems Bootstrap just is more nicer.
3. A lot of code rewrite, CSS cleanup and so on.

2.22v

1. All Javascript's is now compressed.
2. Option to set notes for online user. If you click first user icon in popup the last tab will be notes. https://github.com/LiveHelperChat/livehelperchat/issues/613
3. Delete, Close icons will represents actual user permissions. https://github.com/LiveHelperChat/livehelperchat/issues/614
4. Online users list will have lest icons in last column.
5. New maxmind database for countries
6. Identifier variable for forms.
7. Option to force to use user e-mail as from address in e-mail templates. Use with caution because most cases Gmail could consider mails as spam. But usefull with integration with third party ticket systems.